[package]
name = "battle-snake-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
log = "0.4.0"
rand = "0.8.4"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
shuttle-rocket = "0.40.0"
shuttle-runtime = "0.40.0"
tokio = "1.26.0"
